:Test affichage des images sur github pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<div class="hautPage">
 			
-			<img src="images/Reservia@3x.png" alt ="Logo Reservia">
+			<img src="Images/Reservia@3x.png" alt ="Logo Reservia">
 
 			<div class="menu">
 				
