:Test5 affichage des images sur github pages

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 						<picture>
 							
-							<img src="Images/hebergement/4_small/Cannebière.jpg" alt="image de l'Auberge de la Cannebière">
+							<img src="Images/Hebergement/4_small/Cannebière.JPG" alt="image de l'Auberge de la Cannebière">
 
 						</picture>
 
