--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="Images/favicon.png" type="image/gif" sizes="16x16">
 	<title>Reservia</title>
 	<link rel="stylesheet" type="text/css" href="Style.css">
 	<link rel="stylesheet" href="Icones/css/all.css">
