:Suppression des erreurs au validateur W3C

--- a/index.html
+++ b/index.html
@@ -142,25 +142,26 @@
 
 			</div>
 
-			<div class="info">
+	</header>
 
-				<div class="icone_info">
+	<section>
+
+		<div class="info">
+
+			<div class="icone_info">
 					
-					<i class="fas fa-info"></i>
-
-				</div>
-
-				<p>Plus de 500 logements sont disponibles dans cette villes</p>
+				<i class="fas fa-info"></i>
 
 			</div>
 
-	</header>
+			<h5>Plus de 500 logements sont disponibles dans cette villes</h5>
 
+		</div>
 
-	<section class="section1">
+		<div class="section1">
 		
 		<article class="art_hebergement">
-			
+
 			<h3 id="Heb">Hébergements à Marseille</h3>
 
 			<div class="hebergement1">
@@ -337,6 +338,8 @@
 
 		</article>
 
+		
+
 		<aside class="populaire">
 
 			
@@ -449,6 +452,8 @@
 			</div>
 
 		</aside>
+
+		</div>
 		
 	</section>
 
