:Vérification et finition

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
 				<div class="ensemble_populaire">
 
-					<a href="H"><div class="Site_populaire">
+					<a href="#"><div class="Site_populaire">
 				
 						<div class="image_site_populaire">
 
