:Correction des erreurs de texte

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 						</div>
 
-						<input type="submit" name="bouton familial" value ="Économie" class="bouton_filtre">
+						<input type="submit" name="bouton familial" value ="Économique" class="bouton_filtre">
 
 					</div>
 
