:Ajout d'un lien sur la rubrique 'S'inscrire'

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							
 							<li class="hebergement"><a href="#Heb">Hébergement</a></li>
 							<li class="activites"> <a href="#Activités_M">Activités</a></li>
-							<li class="bluecolor">S'inscrire</li>
+							<li class="bluecolor"><a href="#">S'inscrire</a></li>
 
 						</ul>
 
